force-app/main/default/objects/Ledger_Entry__c/Ledger_Entry__c.object-meta.xml
<CustomObject>
    <label>Ledger Entry</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Ledger Entry  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>