force-app/main/default/objects/Ledger_Entry__c/fields/External_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Transaction_ID__c</fullName>
    <label>External Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>