force-app/main/default/objects/Ledger_Entry__c/fields/Funding_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Funding_Allocation__c</fullName>
    <label>Funding Allocation</label>
    <referenceTo>Funding_Allocation__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>