force-app/main/default/objects/Ledger_Entry__c/fields/Reference_Claim__c.field-meta.xml
<CustomField>
    <fullName>Reference_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Claim</label>
    <referenceTo>Care_Claim__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>