force-app/main/default/objects/Ledger_Entry__c/fields/Reversal_Of__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversal Of</label>
    <referenceTo>Ledger_Entry__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>