force-app/main/default/objects/Ledger_Entry__c/fields/Transaction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Timestamp__c</fullName>
    <label>Transaction Timestamp</label>
    <type>DateTime</type>
</CustomField>